CPG-DEV/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ActiveProduct2__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Product Checkbox for Development to update this field from PricebookEntry.Active field update.</description>
        <label>Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume0Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume1Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume2Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM0Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume CM (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM1Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume CM (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM2Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Actual Annual Volume CM (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Bread/ bread products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet Biscuits/Cookies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savory Biscuits/Crackers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastries/Sweet Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixes &amp; Doughs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Mixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbonated Soft Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional &amp; Flavored Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice, Juice Drinks, Nectars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports/Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTD Tea/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powdered /Dry Mixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Concentrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine, spirits and alc flavored drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chewing Gums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillings, Coatings, Toppings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Meals/Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sauces, Dressings &amp; Condiments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oils, Fats and Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egg Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Creamers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Drinks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant &amp; baby food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks &amp; cereals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Accounts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtendedFloorPrice__c</fullName>
        <description>Pricing Guidance Floor Price * Quantity</description>
        <formula>PricingGuildanceFloorPrice__c   *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pricing Guidance Floor Price * Quantity</inlineHelpText>
        <label>Extended Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtendedStartPrice__c</fullName>
        <description>Price Guidance Start Price * Product Quantity</description>
        <formula>PricingGuidanceStartPrice__c   * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Guidance Start Price * Product Quantity</inlineHelpText>
        <label>Extended Start Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtendedTargetPrice__c</fullName>
        <description>Pricing Guidance Target Price * Quantity</description>
        <formula>PricingGuidanceTargetPrice__c  * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pricing Guidance Target Price * Quantity</inlineHelpText>
        <label>Extended Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>The lowest price at which this item should be sold under the current conditions</description>
        <label>Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IfLostCompetitorLostTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Lost, Competitor Lost To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product (If Lost, Competitor Lost To)</relationshipLabel>
        <relationshipName>Opportunity_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IfWonCompetitorWonAgainst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Won, Competitor Won Against</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product (If Won, Competitor Won Against)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGUnitPrice__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <formula>CASE(UnitOfMeasure__c,
   &quot;Pound (lb)&quot;, TotalPrice / KGUnitQuantity__c, 
   &quot;Kilogram (kg)&quot;, UnitPrice, 
   &quot;Hundred Weight (CWT)&quot;, TotalPrice /(KGUnitQuantity__c * 50.8023),
   &quot;Metric Ton (MT)&quot;, TotalPrice / (KGUnitQuantity__c * 2205),
   &quot;Each (EA)&quot;, IF(PricebookEntry.Product2.EAtoKGConversionRate__c &lt;&gt; 0, TotalPrice / PricebookEntry.Product2.EAtoKGConversionRate__c,0),
   &quot;Gallon (GAL)&quot;, IF(PricebookEntry.Product2.GALtoKGConversionRate__c &lt;&gt; 0, TotalPrice /  PricebookEntry.Product2.GALtoKGConversionRate__c, 0),
   &quot;Case&quot;, IF(PricebookEntry.Product2.CASEtoKGConversionRate__c &lt;&gt; 0,TotalPrice / PricebookEntry.Product2.CASEtoKGConversionRate__c,0),
   &quot;Liter&quot;, IF(PricebookEntry.Product2.LITERtoKGConversionRate__c &lt;&gt; 0, Quantity * PricebookEntry.Product2.LITERtoKGConversionRate__c, 0),
   0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kilogram (kg) Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGUnitQuantity__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <formula>CASE(UnitOfMeasure__c,
   &quot;Pound (lb)&quot;, Quantity * 2.20462, 
   &quot;Kilogram (kg)&quot;, Quantity, 
   &quot;Hundred Weight (CWT)&quot;, Quantity * 50.8023,
   &quot;Metric Ton (MT)&quot;, Quantity * 2205,
   &quot;Each (EA)&quot;, Quantity * PricebookEntry.Product2.EAtoKGConversionRate__c,
   &quot;Gallon (GAL)&quot;, Quantity * PricebookEntry.Product2.GALtoKGConversionRate__c,
   &quot;Case&quot;, Quantity * PricebookEntry.Product2.CASEtoKGConversionRate__c,
   &quot;Liter&quot;, Quantity * PricebookEntry.Product2.LITERtoKGConversionRate__c,
   0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kilogram (kg) Unit Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBUnitPrice__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <formula>CASE(UnitOfMeasure__c,
   &quot;Pound (lb)&quot;, UnitPrice, 
   &quot;Kilogram (kg)&quot;, TotalPrice / KGUnitQuantity__c, 
   &quot;Hundred Weight (CWT)&quot;, TotalPrice /(KGUnitQuantity__c *100),
   &quot;Metric Ton (MT)&quot;, TotalPrice / (KGUnitQuantity__c * 1000),
   &quot;Each (EA)&quot;, 
      IF(
      PricebookEntry.Product2.EAtoLBConversionRate__c &lt;&gt; 0,
      TotalPrice / PricebookEntry.Product2.EAtoLBConversionRate__c,
      0),
   &quot;Gallon (GAL)&quot;,
      IF(
      PricebookEntry.Product2.GALtoLBConversionRate__c &lt;&gt; 0, 
      TotalPrice /  PricebookEntry.Product2.GALtoLBConversionRate__c,
      0),
   &quot;Case&quot;, 
       IF(
       PricebookEntry.Product2.CASEtoLBConversionRate__c &lt;&gt; 0, 
       TotalPrice / 
       PricebookEntry.Product2.CASEtoLBConversionRate__c,
       0),
   &quot;Liter&quot;, 
        IF(
        PricebookEntry.Product2.LITERtoLBConversionRate__c &lt;&gt;0,
        Quantity *  
        PricebookEntry.Product2.LITERtoLBConversionRate__c,
        0),
   0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pound (lb) Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBUnitQuantity__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <formula>CASE(UnitOfMeasure__c,
   &quot;Pound (lb)&quot;, Quantity, 
   &quot;Kilogram (kg)&quot;, Quantity * 0.453592, 
   &quot;Hundred Weight (CWT)&quot;, Quantity * 100,
   &quot;Metric Ton (MT)&quot;, Quantity * 1000,
   &quot;Each (EA)&quot;, Quantity * PricebookEntry.Product2.EAtoLBConversionRate__c,
   &quot;Gallon (GAL)&quot;, Quantity * PricebookEntry.Product2.GALtoLBConversionRate__c,
   &quot;Case&quot;, Quantity * PricebookEntry.Product2.CASEtoLBConversionRate__c,
   &quot;Liter&quot;, Quantity * PricebookEntry.Product2.LITERtoLBConversionRate__c,
   0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pound (lb) Unit Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>TotalPrice - Quantity * ( PricebookEntry.Product2.FixedCost__c + PricebookEntry.Product2.VariableCost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <globalPicklist>Payment_Terms</globalPicklist>
        <label>Payment Terms</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PricingGuidanceStartPrice__c</fullName>
        <description>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</description>
        <inlineHelpText>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</inlineHelpText>
        <label>Pricing Guidance: Start Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingGuidanceTargetPrice__c</fullName>
        <description>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</description>
        <inlineHelpText>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</inlineHelpText>
        <label>Pricing Guidance: Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingGuildanceFloorPrice__c</fullName>
        <description>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</description>
        <inlineHelpText>Defaulted from Pricebook Entry upon Opportunity Product CREATE.</inlineHelpText>
        <label>Pricing Guildance: Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductWeightQuantityImperial__c</fullName>
        <formula>PricebookEntry.Product2.ProductWeightQuantityImperial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Weight Quantity (Imperial)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductWeightQuantityMetric__c</fullName>
        <formula>PricebookEntry.Product2.ProductWeightQuantityMetric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Weight Quantity (Metric)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductWeightUnitOfMeasureImperial__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.ProductWeightUnitOfMeasureImperial__c)</formula>
        <label>Product Weight Unit of Measure(Imperial)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductWeightUnitOfMeasureMetric__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.ProductWeightUnitOfMeasureMetric__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Weight Unit of Measure (Metric)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Product_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Product Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume0Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume1Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume2Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM0Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume CM (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM1Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume CM (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM2Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume CM (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM3Yearr__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Product Field</description>
        <label>Projected Annual Volume CM (3-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Product Win/Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost - Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Product Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Product Discontinuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Customer Lost Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>The List Price should be the highest of the range</description>
        <label>Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>The ideal price for the item based on configurable conditions</description>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <globalPicklist>Unit_of_Measure_Combined</globalPicklist>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>Opp_Product_LOCKED_on_Closed_Won_Opps</fullName>
        <active>true</active>
        <description>Lock Opportunity Products on Closed Won Opp with Processed Contracts.</description>
        <errorConditionFormula>AND(ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;), 
NOT(OR($Profile.Name  =  &quot;System Administrator&quot;, $Profile.Name  =  &quot;Group Coordinator&quot;))
)</errorConditionFormula>
        <errorMessage>Closed Won Opportunities not eligible for EDIT of Opportunity Products.</errorMessage>
    </validationRules>
</CustomObject>